# headscale-console

./: .gitignore  Dockerfile  LICENSE  README.md  components.json  docker-compose.yaml  go.mod  go.sum  index.html  main.go  package.json  patch-version.js  server.go  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: check-pr.yaml  check.yaml  next.yaml  release.yaml  unstable.yaml
cmd/: cmd.go  health.go  policyservice.go  selfservice.go  serve.go
docs/: architecture.md  build.md  configuration.md  deploy.md
internal/headscale/: headscale.go
internal/ipnState/: ipnState.go
internal/loggingMiddleware/: loggingMiddleware.go
internal/policy/: policy.go
internal/selfservice/: authkeys.go  nodes.go  selfservice.go
internal/tsnet/: middleware.go  state.go  tsnet.go
internal/utils/: fs.go
package/ironRdp/: Cargo.toml  rust-toolchain.toml
package/ironRdp/src/: data_channel.rs
package/ironrdp/: README.md
package/ironrdp/src/: error.rs  image.rs
package/tailscale/: README.md  index.ts  ipn.d.ts  tailscale.go  tsconnect.d.ts
proto/: README.md  buf.gen.yaml  buf.yaml
proto/headscale/v1/: apikey.proto  device.proto  headscale.proto  node.proto  policy.proto  preauthkey.proto  user.proto
public/: frontend.go
src/: App.svelte  Connect.svelte  Critical.svelte  Layout.svelte  LoadingScreen.svelte  LoginScreen.svelte  LogoutScreen.svelte  app.css  main.ts  sw.ts  vite-env.d.ts
src/lib/api/policyservice/: index.ts
src/lib/api/self-service/: index.ts
src/lib/api/tsconnect/: index.ts  pkg.d.ts  pkg.js  pkg.js.map  tailscale.d.ts  tsconnect.d.ts
src/lib/components/connect/: IronRDP.svelte  NoVNC.svelte  Xterm.svelte
src/lib/components/data/authkeys/: AuthKey.svelte  AuthkeyTable.svelte  CreateAuthkey.svelte
src/lib/components/data/node/: MachinesTable.svelte  NodeInfo.svelte  NodeMap.svelte  SelectNode.svelte  machines-table-item.svelte  node-map-item.svelte
src/lib/components/data/settings/: Settings.svelte
src/lib/components/data/user/: UserMenu.svelte  UsersTable.svelte  logout-dialog.svelte
src/lib/components/data/users/: NetworkMembers.svelte
src/lib/components/error/: CriticalError.svelte  index.ts
src/lib/components/ironrdp/: index.ts  ironrdp-login.svelte  ironrdp.svelte
src/lib/components/ironrdp/enums/: LockKey.ts  LogType.ts  ModifierKey.ts  OS.ts  ScreenScale.ts  SessionEventType.ts  SpecialCombination.ts
src/lib/components/ironrdp/interfaces/: ClipboardContent.ts  ClipboardTransaction.ts  DesktopSize.ts  DeviceEvent.ts  Extension.ts  ExtensionValue.ts  InputTransaction.ts  MousePosition.ts  NewSessionInfo.ts  RemoteDesktopModule.ts  ResizeEvent.ts  ServerRect.ts  Session.ts  SessionBuilder.ts  SessionTerminationInfo.ts  UserInteraction.ts  session-event.ts
src/lib/components/ironrdp/lib/: scancodes.ts
src/lib/components/ironrdp/rdp/: index.ts
src/lib/components/ironrdp/services/: Config.ts  ConfigBuilder.ts  PublicAPI.ts  logging.service.ts  remote-desktop.service.ts
src/lib/components/monaco/: index.ts  monaco-diff-editor.svelte  monaco-editor.svelte
src/lib/components/novnc/: index.ts  novnc-login.svelte
src/lib/components/qrcode/: index.ts  qr.svelte
src/lib/components/sidebar/: app-sidebar.svelte  index.ts  logout-dialog.svelte  nav-user.svelte
src/lib/components/ui/alert/: alert-title.svelte  alert.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-description.svelte  alert-dialog-overlay.svelte  alert-dialog-title.svelte
src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/command/: command-empty.svelte  command-input.svelte  command-link-item.svelte  command-list.svelte  command-separator.svelte  command-shortcut.svelte  command.svelte
src/lib/components/ui/dialog/: dialog-content.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-sub-trigger.svelte
src/lib/components/ui/hover-card/: hover-card-content.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/radio-group/: radio-group-item.svelte
src/lib/components/ui/sheet/: sheet-content.svelte  sheet-header.svelte
src/lib/components/ui/sidebar/: sidebar-input.svelte  sidebar-menu-button.svelte  sidebar-menu-skeleton.svelte  (+4 more)
src/lib/components/utils/: ConfirmAction.svelte  Secret.svelte  Spinner.svelte  Time.svelte
src/lib/components/window/: index.ts  window-system.svelte
src/lib/store/: config.ts  ipn.ts  selfservice.ts  settings.ts  tailscale.ts
src/lib/types/: ipn.d.ts  tailscale.d.ts
src/lib/utils/: connect.ts  error.ts  misc.ts  monaco.ts  policy.ts  router.ts  sw.ts  tailscale.ts  time.ts  toast.ts
src/routes/: 404.svelte  Auth.svelte  Authkeys.svelte  Connect.svelte  Machines.svelte  Policy.svelte  Settings.svelte  Users.svelte  index.ts
wasm/: Cargo.toml  README.md  go.mod  go.sum  wasm.go
wasm/src/: canvas.rs  input.rs  lib.rs  network_client.rs  session.rs  utils.rs
wasm/src/clipboard/: mod.rs  transaction.rs
(+11 files in other folders)
