# Copyright (c) Devolutions & contributors
# GitHub: Devolutions/IronRDP
# Source: https://github.com/Devolutions/IronRDP/blob/bdde2c76ded7315f7bc91d81a0909a1cb827d870/crates/ironrdp-web/Cargo.toml
# Changes made:
# - Changed all ironrdp packages from local to released creates
# - Added TLS packages
# - Removed websocket related packages / features

[package]
name = "headscale-console"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false
crate-type = ["cdylib", "rlib"]

[features]
default = ["panic_hook"]
panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
# Protocols
ironrdp = { version = "0.9.1", features = [
    "connector",
    "session",
    "input",
    "graphics",
    "dvc",
    "cliprdr",
    "svc",
    "displaycontrol"
] }
ironrdp-core = "0.1.4"
ironrdp-cliprdr-format = "0.1.3"
ironrdp-futures = "0.2.0"
ironrdp-async = "0.4.0"

# TLS
futures-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23.26", default-features = false, features = ["ring", "tls12", "logging", "read_buf"] }
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }
rustls-pki-types = { version = "1.10.0", features = ["web"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "RtcDataChannel", "MessageEvent"] }
js-sys = "0.3"
gloo-net = { version = "0.6", default-features = false, features = ["http", "io-util"] }
gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tracing-web = "0.1"

# Rendering
softbuffer = { version = "0.4", default-features = false }
png = "0.17"
resize = { version = "0.8", features = ["std"], default-features = false }
rgb = "0.8"

# Enable WebAssembly support for a few crates
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
time = { version = "0.3", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# Async
futures-util = { version = "0.3", features = ["sink", "io"] }
futures-channel = "0.3"

# Logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["time"] }

# Utils
anyhow = "1"
smallvec = "1.15"
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
tap = "1"
semver = "1"
url = "2.5"
base64 = "0.22"

# [lints]
# workspace = true

#  [dependencies]
#  # Protocols
#  ironrdp = { version = "0.9.1", features = [
#      "connector",
#      "session",
#      "input",
#      "graphics",
#      "dvc",
#      "cliprdr",
#      "svc",
#      "displaycontrol"
#  ] }
#  ironrdp-core = "0.1.4"
#  ironrdp-cliprdr-format = "0.1.3"
#  ironrdp-futures = "0.2.0"
#  ironrdp-async = "0.4.0"
#  # tls
#  futures-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12", "logging"] }
#  rustls = { version = "0.23.26", default-features = false, features = ["ring", "tls12", "logging", "read_buf"] }
#  ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }
#  rustls-pki-types = { version = "1.10.0", features = ["web"] }
#  # WASM
#  wasm-bindgen = "0.2"
#  wasm-bindgen-futures = "0.4"
#  web-sys = { version = "0.3", features = ["HtmlCanvasElement", "RtcDataChannel"] }
#  js-sys = "0.3"
#  gloo-net = { version = "0.6", default-features = false, features = ["websocket", "http", "io-util"] }
#  gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
#  tracing-web = "0.1"
#  # Rendering
#  softbuffer = { version = "0.4", default-features = false }
#  png = "0.17"
#  resize = { version = "0.8", features = ["std"], default-features = false }
#  rgb = "0.8"
#  # Enable WebAssembly support for a few crates
#  getrandom = { version = "0.2", features = ["js"] }
#  chrono = { version = "0.4", features = ["wasmbind"] }
#  time = { version = "0.3", features = ["wasm-bindgen"] }
#  # The `console_error_panic_hook` crate provides better debugging of panics by
#  # logging them with `console.error`. This is great for development, but requires
#  # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
#  # code size when deploying.
#  console_error_panic_hook = { version = "0.1", optional = true }
#  # Async
#  futures-util = { version = "0.3", features = ["sink", "io"] }
#  futures-channel = "0.3"
#  futures = "0.3.31"
#  # Logging
#  tracing = { version = "0.1", features = ["log"] }
#  tracing-subscriber = { version = "0.3", features = ["time"] }
#  # Utils
#  anyhow = "1"
#  smallvec = "1.13"
#  x509-cert = { version = "0.2", default-features = false, features = ["std"] }
#  tap = "1"
#  semver = "1"
#  url = "2.5"
#  base64 = "0.22"
#  bytes = "1.10.1"
